package com.thienan.product_service.core.product.enums;

public enum ProductStatus {
    ACTIVE, INACTIVE, DRAFT, DELETED, ARCHIVED, OUT_OF_STOCK, ARRIVING
}
