package com.thienan.product_service.core.product_variant.enumeration;

public enum ProductVariantStatus {
    ACTIVE, INACTIVE, DRAFT, DELETED, ARCHIVED, OUT_OF_STOCK, ARRIVING
}
